--- a/website/newsletter/166/index.mdx
+++ b/website/newsletter/166/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /166
-title: "This Week In React #166: Server Components, Waku, Million, React-Forget, Remotion, React-Native, Expo, Storybook, Next.js, Remix, AuthKit, Reactotron, Unistyles..."
+title: "This Week In React #166: Server Components, Waku, Million, React-Forget, Remotion,  Next.js, React-Native, Expo, Storybook, Remix, AuthKit, Expo Router, Reactotron, Unistyles, Skia, CSS, Oxlint..."
 authors: [slorber]
 date: 12-12-2023
 unlisted: true
@@ -59,7 +59,7 @@ Waku is a minimal React framework that allows us to explore the core RSC capabil
 - 📜 [Polymorphism in React - 2 patterns you must know](https://www.bekk.christmas/post/2023/01/polymorphism-in-react)
 - 📜 [Lexical state updates](https://dio.la/article/lexical-state-updates)
 - 📦 [React DevTools 5.0 - New React-Forget badge](https://github.com/facebook/react/pull/27759): new feature permits to see Meta's rollout of React-Forget in production on Instagram ([ref](https://twitter.com/sebastienlorber/status/1734607171030303186)).
-- 📦 [Million.js 3.0](https://million.dev/blog/million-3): new overhauled version of this React VDOM alternative is a faster drop-in replacement.
+- 📦 [Million.js 3.0 - Overhauled version, faster drop-in replacement](https://million.dev/blog/million-3)
 - 📦 [AuthKit - The world's best login box powered by WorkOS and Radix](https://www.authkit.com/)
 - 📦 [react-hook-form 7.49 - react-server bundle, reactive errors prop...](https://github.com/react-hook-form/react-hook-form/releases/tag/v7.49.0)
 - 📦 [Next-Admin 3.0 - App router support](https://github.com/premieroctet/next-admin/releases/tag/%40premieroctet%2Fnext-admin%403.0.0)
