--- a/website/newsletter/166/index.mdx
+++ b/website/newsletter/166/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /166
-title: "This Week In React #166: Server Components, Waku, Million, React-Forget, Remotion,  Next.js, React-Native, Expo, Storybook, Remix, AuthKit, Expo Router, Reactotron, Unistyles, Skia, CSS, Oxlint..."
+title: "This Week In React #166: Server Components, Waku, React-Forget, React-Native, Expo, Million, Remotion, Next.js, Storybook, Remix, AuthKit, Expo Router, Reactotron, Unistyles, Skia, SEO, CSS, Oxlint..."
 authors: [slorber]
 date: 12-12-2023
 unlisted: true
@@ -8,7 +8,13 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This has been a quite exciting week in terms of news!
+
+We had a few great React releases and articles. It's great to see React-Forget slowly being rolled out on Instagram. Remotion also started to demonstrate its full potential with the GitHub Unwrapped launch.
+
+React-Native is on fire, with v0.73 stable, Expo SDK 50 and Expo Router v3 in beta and a few other great releases. What excites me most is Expo gradually unveiling its plan to support Universal React Server Components.
+
+This week's issue is quite special for me: it's the very first time I'm not alone writing the content. [Benedikt](https://twitter.com/bndkt) almost wrote the entire React-Native section. I haven't used React-Native in production since 2020 😅 so it's nice to have someone using [all the cutting edge libs](https://github.com/bndkt/sharemystack) help me provide relevant insights.
 
 <!-- truncate -->
 
@@ -92,7 +98,7 @@ Offers industry-standard solutions for critical project aspects like **authentic
 - 📊 [State of React-Native - Reminder to fill the survey!](https://survey.stateofreactnative.com/)
 - 🚧 [RFC - Well-defined event loop processing model](https://github.com/react-native-community/discussions-and-proposals/pull/744): proposal to bring the React Native event loop closer to the web specification.
 - 🐦 [POC of multi-window apps support in React Native](https://x.com/o_kwasniewski/status/1734198386612388263)
-- 🐦 [interpolate() in React Native Reanimated](https://x.com/kacperkapusciak/status/1732794213371097491): finally understand Extrapolation with this X thread.
+- 🐦 [interpolate() in React Native Reanimated - visually understand extrapolation](https://x.com/kacperkapusciak/status/1732794213371097491)
 - 📖 [Expo introduces canary releases](https://docs.expo.dev/versions/latest/#canary-releases)
 - 📜 [Expo EAS - Keep your cache close — It’s Faster!](https://expo.dev/changelog/2023/12-07-cocoapods-cache#how-to-speed-up-cocoapods): Expo cuts pod installation time by caching popular pods directly on their build VMs.
 - 📜 [Integrate Firebase Analytics into Expo Router](https://tinybytelabs.com/blog/integrate-firebase-analytics-to-expo-router): unlike React-Navigation, Expo-Router is url-first, and you have to listen to pathname changes.
