--- a/website/newsletter/166/index.mdx
+++ b/website/newsletter/166/index.mdx
@@ -16,6 +16,8 @@ React-Native is on fire, with v0.73 stable, Expo SDK 50 and Expo Router v3 in be
 
 This week's issue is quite special for me: it's the very first time I'm not alone writing the content. [Benedikt](https://twitter.com/bndkt) almost wrote the entire React-Native section. I haven't used React-Native in production since 2020 😅 so it's nice to have someone using [all the cutting edge libs](https://github.com/bndkt/sharemystack) help me provide relevant insights.
 
+Don't forget to fill in the [State of JavaScript](https://stateofjs.com/en-US) and [State of React-Native](https://stateofreactnative.com/) surveys. And if you could mention me at the end that's cool! [Theo T3 shows you how](https://youtube.com/clip/UgkxDdNASo6xNS710ODcjMx0WW4HtTxIYbrA?si=G0rAnDKOQwHqh_ED) 😄
+
 <!-- truncate -->
 
 **💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
