--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /166
-title: "React Hebdo #166: ..."
+title: "React Hebdo #166: Server Components, Waku, React-Forget, React-Native, Expo, Million, Remotion, Next.js, Storybook, Remix, AuthKit, Expo Router, Reactotron, Unistyles, Skia, SEO, CSS, Oxlint..."
 authors: [slorber]
 date: 12-12-2023
-unlisted: true
 ---
 
 Salut à tous !
