--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
@@ -7,15 +7,15 @@ date: 12-12-2023
 
 Salut à tous !
 
-This has been a quite exciting week in terms of news!
+Cette semaine est chargée d'actualités!
 
-We had a few great React releases and articles. It's great to see React-Forget slowly being rolled out on Instagram. Remotion also started to demonstrate its full potential with the GitHub Unwrapped launch.
+Il y a eu pas mal de nouvelles releases, et des articles intéressants. C'est top de voir React-Forget se déployer lentement sur Instagram. Remotion a également commencé à démontrer son plein potentiel avec le lancement de GitHub Unwrapped.
 
-React-Native is on fire, with v0.73 stable, Expo SDK 50 and Expo Router v3 in beta and a few other great releases. What excites me most is Expo gradually unveiling its plan to support Universal React Server Components.
+React-Native est en feu cette semaine, avec la v0.73 stable, Expo SDK 50 et Expo Router v3 en bêta et quelques autres sorties. Ce qui m'excite le plus, c'est qu'Expo dévoile progressivement son plan: supporter les React Server Components de manière universelle.
 
-This week's issue is quite special for me: it's the very first time I'm not alone writing the content. [Benedikt](https://twitter.com/bndkt) almost wrote the entire React-Native section. I haven't used React-Native in production since 2020 😅 so it's nice to have someone using [all the cutting edge libs](https://github.com/bndkt/sharemystack) help me provide relevant insights.
+Cette édition est spéciale pour moi : c'est la première fois que je ne suis pas seul à l'écrire! [Benedikt](https://twitter.com/bndkt) a presque écrit toute la section React-Native. Je n'ai pas utilisé React-Native en production depuis 2020 😅, c'est cool d'avoir quelqu'un qui [utilise toutes les dernières libs](https://github.com/bndkt/sharemystack) pour m'aider à commenter de manière pertinente.
 
-Don't forget to fill in the [State of JavaScript](https://stateofjs.com/en-US) and [State of React-Native](https://stateofreactnative.com/) surveys. And if you could mention me at the end that's cool! [Theo T3 shows you how](https://youtube.com/clip/UgkxDdNASo6xNS710ODcjMx0WW4HtTxIYbrA?si=G0rAnDKOQwHqh_ED) 😄
+N'oubliez pas de répondre aux enquêtes [State of JavaScript](https://stateofjs.com/en-US) et [State of React-Native](https://stateofreactnative.com/). Et si vous pouvez me mentionner à la fin, c'est super ! [Theo T3 vous montre comment faire](https://youtube.com/clip/UgkxDdNASo6xNS710ODcjMx0WW4HtTxIYbrA?si=G0rAnDKOQwHqh_ED) 😄
 
 <!-- truncate -->
 
@@ -45,27 +45,27 @@ A new kind of dev tool for React just opened its beta. See your JSX and styles i
 
 [**Waku - Minimal React Framework that enhances React Server Component usage**](https://waku.gg/blog/introducing-waku)
 
-We already featured this one, but the v0.18 rewrite is out, and includes a little introduction blog post.
-Waku is a minimal React framework that allows us to explore the core RSC capabilities, free from the traditional SSG/SSR strategies. Technically it is a Vite-based bundler that outputs pure JS and supports deployment to edge runtimes. Now sponsored by Vercel.
+Nous l'avions déjà présenté, mais la v0.18 vient de sortir avec un petit blog post pour finalement l'introduire proprement.
+Waku est un framework React minimal qui nous permet d'explorer les capacités de base des Server Components, en dehors des stratégies SSG/SSR habituelles. Techniquement, il s'agit d'un bundler basé sur Vite qui produit du JS pur et supporte le déploiement vers des runtimes edge. Projet maintenant sponsorisé par Vercel.
 
 ---
 
 - 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
-- 🍿 [Remotion - GitHub Unwrapped 2023](https://githubunwrapped.com/): this year Remotion partnered with GitHub to produce the GitHub Unwrapped video ([here is mine](https://twitter.com/sebastienlorber/status/1734622460547342693)). A great showcase for the type of videos that can be produced using React.
-- 🐦 [React hydration error diff demo](https://twitter.com/samijaber_/status/1734332721634099282): revival of interest for this much needed feature ([new React PR](https://github.com/facebook/react/pull/27808)).
-- 🐦 [Tanner Linsley about React concurrent model vs reactive model](https://twitter.com/tannerlinsley/status/1732474127712481371): on the difficulty to get the benefits of both models at once. Tanner finally migrated the upcoming TanStack Router to a reactive model ([visual demo](https://x.com/aryan__deora/status/1733164876170764409)).
+- 🍿 [Remotion - GitHub Unwrapped 2023](https://githubunwrapped.com/): cette année, Remotion s'est associé à GitHub pour produire la vidéo GitHub Unwrapped ([voici la mienne](https://twitter.com/sebastienlorber/status/1734622460547342693)). Une belle vitrine pour le type de vidéos qui peuvent être produites avec React.
+- 🐦 [React hydration error diff demo](https://twitter.com/samijaber_/status/1734332721634099282): regain d'intérêt pour cette fonctionnalité très attendue ([nouvelle PR React](https://github.com/facebook/react/pull/27808)).
+- 🐦 [Tanner Linsley about React concurrent model vs reactive model](https://twitter.com/tannerlinsley/status/1732474127712481371): sur la difficulté d'obtenir les avantages des deux modèles à la fois. Tanner a finalement migré le futur routeur TanStack vers un modèle réactif ([démo visuelle](https://x.com/aryan__deora/status/1733164876170764409)).
 - 🐦 [Next.js moving away from extending `fetch()`, adding new APIs like `noStore()`](https://twitter.com/leeerob/status/1733154383410684148)
 - 📖 [Next.js - Updated Server Actions docs - Includes how to use them outside forms, security recommendations, and best practices](https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations)
 - 📖 [Next.js React Foundations updated with App Router and Server Components](https://nextjs.org/learn/react-foundations)
-- 📜 [A Chain Reaction](https://overreacted.io/a-chain-reaction/): Dan Abramov is back with great storytelling lesson through the implementation of a recursive function that renders JSX to platform elements.
-- 📜 [Next.js 14: Layouts vs Templates](https://www.builder.io/blog/nextjs-14-layouts-templates): templates are remounted on navigation and reset their state.
-- 📜 [Storybook for React Server Components](https://storybook.js.org/blog/storybook-react-server-components/): Storybook 8 is now in alpha. In includes experimental Next.js RSC support. In practice RSCs will run client-side and you have to mock networks and Node.js APIs.
-- 📜 [The anatomy of shadcn/ui](https://manupa.dev/blog/anatomy-of-shadcn-ui): gives a great overview of the popular Radix + Tailwind l̶i̶b̶r̶a̶r̶y̶, and how it assembles various packages to provide a good DX.
-- 📜 [How to set up self-healing URLs in Next.js for better SEO](https://mikebifulco.com/posts/self-healing-urls-nextjs-seo): shows how to create Next.js urls that are both human-readable and include a stable id. You can change the article title/url without breaking old links.
-- 📜 [Remix - Submit a form without overwriting existing parameters](https://www.jacobparis.com/content/existing-params): suggests to use a `<ExistingSearchParams>` to append existing params to the form.
+- 📜 [A Chain Reaction](https://overreacted.io/a-chain-reaction/): Dan Abramov est de retour avec une belle leçon de storytelling à travers la création d'une fonction récursive qui render du JSX.
+- 📜 [Next.js 14: Layouts vs Templates](https://www.builder.io/blog/nextjs-14-layouts-templates): les templates sont remontés lors de la navigation et réinitialisent leur état.
+- 📜 [Storybook for React Server Components](https://storybook.js.org/blog/storybook-react-server-components/): Storybook 8 est en alpha. Il inclut le support expérimental de Next.js RSC. En pratique, les RSC s'exécutent côté client et vous devrez mocker le network et appels Node.js.
+- 📜 [The anatomy of shadcn/ui](https://manupa.dev/blog/anatomy-of-shadcn-ui): donne un bon aperçu de la l̶i̶b̶r̶a̶r̶y̶ populaire utilisant Radix + Tailwind, et la façon dont il divers packages sont assemblés pour fournir une bonne DX.
+- 📜 [How to set up self-healing URLs in Next.js for better SEO](https://mikebifulco.com/posts/self-healing-urls-nextjs-seo): montre comment créer des urls Next.js qui sont à la fois lisibles et qui incluent un identifiant stable, pour pouvoir changer le titre de l'article sans briser les liens.
+- 📜 [Remix - Submit a form without overwriting existing parameters](https://www.jacobparis.com/content/existing-params): suggère d'utiliser un `<ExistingSearchParams>` pour ajouter les paramètres existants au formulaire.
 - 📜 [Polymorphism in React - 2 patterns you must know](https://www.bekk.christmas/post/2023/01/polymorphism-in-react)
 - 📜 [Lexical state updates](https://dio.la/article/lexical-state-updates)
-- 📦 [React DevTools 5.0 - New React-Forget badge](https://github.com/facebook/react/pull/27759): new feature permits to see Meta's rollout of React-Forget in production on Instagram ([ref](https://twitter.com/sebastienlorber/status/1734607171030303186)).
+- 📦 [React DevTools 5.0 - New React-Forget badge](https://github.com/facebook/react/pull/27759): nouvelle feature qui permet de voir le déploiement de React-Forget de Meta en production sur Instagram ([ref](https://twitter.com/sebastienlorber/status/1734607171030303186)).
 - 📦 [Million.js 3.0 - Overhauled version, faster drop-in replacement](https://million.dev/blog/million-3)
 - 📦 [AuthKit - The world's best login box powered by WorkOS and Radix](https://www.authkit.com/)
 - 📦 [react-hook-form 7.49 - react-server bundle, reactive errors prop...](https://github.com/react-hook-form/react-hook-form/releases/tag/v7.49.0)
@@ -97,22 +97,22 @@ Offers industry-standard solutions for critical project aspects like **authentic
 ![React Native 0.73, Expo SDK 50 beta, Expo Router v3 beta](/emails/issues/166/rnheader.jpg)
 
 - 📊 [State of React-Native - Reminder to fill the survey!](https://survey.stateofreactnative.com/)
-- 🚧 [RFC - Well-defined event loop processing model](https://github.com/react-native-community/discussions-and-proposals/pull/744): proposal to bring the React Native event loop closer to the web specification.
+- 🚧 [RFC - Well-defined event loop processing model](https://github.com/react-native-community/discussions-and-proposals/pull/744): pour que l'event-loop de React Native se rapproche de la spécification web.
 - 🐦 [POC of multi-window apps support in React Native](https://x.com/o_kwasniewski/status/1734198386612388263)
 - 🐦 [interpolate() in React Native Reanimated - visually understand extrapolation](https://x.com/kacperkapusciak/status/1732794213371097491)
 - 📖 [Expo introduces canary releases](https://docs.expo.dev/versions/latest/#canary-releases)
-- 📜 [Expo EAS - Keep your cache close — It’s Faster!](https://expo.dev/changelog/2023/12-07-cocoapods-cache#how-to-speed-up-cocoapods): Expo cuts pod installation time by caching popular pods directly on their build VMs.
-- 📜 [Integrate Firebase Analytics into Expo Router](https://tinybytelabs.com/blog/integrate-firebase-analytics-to-expo-router): unlike React-Navigation, Expo-Router is url-first, and you have to listen to pathname changes.
+- 📜 [Expo EAS - Keep your cache close — It’s Faster!](https://expo.dev/changelog/2023/12-07-cocoapods-cache#how-to-speed-up-cocoapods): Expo réduit le temps d'installation des pods en mettant en cache les pods les plus populaires directement sur leurs VM EAS.
+- 📜 [Integrate Firebase Analytics into Expo Router](https://tinybytelabs.com/blog/integrate-firebase-analytics-to-expo-router): Contrairement à React-Navigation, Expo-Router est url-first, et vous devez écouter les changements de pathname.
 - 📜 [Creating a macOS MenuBar app with React Native](https://www.oskarkwasniewski.dev/blog/create-react-native-macos-menubar-app)
-- 📜 [Epic Games vs Google - Trial Verdict, a Win for All Developers](https://www.epicgames.com/site/en-US/news/epic-v-google-trial-verdict-a-win-for-all-developers): might bring changes to the app stores rules regarding in-app-payment models and their 30% tax.
-- 📦 [React Native 0.73](https://reactnative.dev/blog/2023/12/06/0.73-debugging-improvements-stable-symlinks) with a new debugger intended to replace Flipper (see updated [docs](https://reactnative.dev/docs/debugging)), stable Symlink support in Metro (important in monorepos) and a new Kotlin template for Android (+ Android 14 support).
-- 📦 [Expo SDK 50 beta](https://expo.dev/changelog/2023/12-12-sdk-50-beta): upgrades to React-Native 0.73, with a new Expo Dev Tools Plugin API, a complete rewrite of `expo-sqlite`, improved `expo-camera`, a new library to figure out compatibility between a JS bundle and a particular native build (`@expo/fingerprint`), `expo-updates` hooks API, EAS updates/rollouts and much more.
-- 📦 [Expo Router v3 beta](https://blog.expo.dev/expo-router-v3-beta-is-now-available-eab52baf1e3e): includes API routes, Bundle Splitting for web, and a ton of other new features. Universal React Server Components are coming to Expo!
-- 📦 [Reactotron 3.0](https://shift.infinite.red/announcing-reactotron-3-0-934b5a221bda): brings automatic tracking of all log messages, better Android device debugging, faster app launch time.
-- 📦 [React Native Skia - 3D transformations](https://github.com/Shopify/react-native-skia/pull/2033): William Candillon posted a 🐦 [demo](https://x.com/wcandillon/status/1733972374930837776)
+- 📜 [Epic Games vs Google - Trial Verdict, a Win for All Developers](https://www.epicgames.com/site/en-US/news/epic-v-google-trial-verdict-a-win-for-all-developers): pourrait apporter des changements aux règles des app stores sur les modèles de paiement in-app et leur taxe de 30 %.
+- 📦 [React Native 0.73](https://reactnative.dev/blog/2023/12/06/0.73-debugging-improvements-stable-symlinks) nouveau debugger destiné à remplacer Flipper, support stable de Symlink dans Metro (important pour les monorepos), template Kotlin pour Android, support d'Android 14...
+- 📦 [Expo SDK 50 beta](https://expo.dev/changelog/2023/12-12-sdk-50-beta): upgrade vers React-Native 0.73, nouvelle API Expo Dev Tools Plugin, une réécriture complète de `expo-sqlite`, une amélioration de `expo-camera`, une nouvelle bibliothèque pour déterminer la compatibilité entre un bundle JS et un build natif particulier (`@expo/fingerprint`), `expo-updates` hooks API, EAS updates/rollouts et bien plus encore.
+- 📦 [Expo Router v3 beta](https://blog.expo.dev/expo-router-v3-beta-is-now-available-eab52baf1e3e): inclut les API Routes, le bundle splitting pour le web, et beaucoup d'autres nouvelles fonctionnalités. Expo dévoile sa volonté de supporter les Universal React Server Components.
+- 📦 [Reactotron 3.0](https://shift.infinite.red/announcing-reactotron-3-0-934b5a221bda): automatic log tracking, amélioration debugging Android, plus rapide...
+- 📦 [React Native Skia - 3D transformations](https://github.com/Shopify/react-native-skia/pull/2033): voir aussi la 🐦 [demo](https://x.com/wcandillon/status/1733972374930837776) de William Candillon
 - 📦 [React-Native-Unistyles 2.0](https://reactnativeunistyles.vercel.app/)
 - 📦 [react-native-permissions 4.0 - iOS 17, Android 14 support](https://github.com/zoontek/react-native-permissions/releases/tag/4.0.0)
-- 🎙️ [Galaxies - Rocket Ship](https://podcast.galaxies.dev/): recent React-Native focused podcast worth discovering
+- 🎙️ [Galaxies - Rocket Ship](https://podcast.galaxies.dev/): nouveau podcast avec un focus React-Native et de bons invités, à découvrir.
 
 ---
 
