--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -36,9 +36,29 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 <Todo />
 
-- 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data,  promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
+- 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data, promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
 
 <SubscribeFormEmbed placement="middle" />
+
+---
+
+## 💸 Sponsor {#sponsor2}
+
+[![notJust Dev](/emails/issues/167/notjustdev.jpg)](https://www.youtube.com/@notjustdev/live?sub_confirmation=1)
+
+**[Are you a React Native developer or on your way to becoming one?](https://www.youtube.com/@notjustdev/live?sub_confirmation=1)**
+
+Good news! You’ve found your endless source of skills!
+
+🎄 [**Here**](https://www.youtube.com/watch?v=bIQII7gTXDE&list=PLY3ncAV1dSVA9ltOEMgzT8ZTZiccpOUkX) is #**DEVember -** a month-long Marathon of React Native Tutorials
+
+🚀 [**Here**](https://academy.notjust.dev/?utm_source=newsletter&utm_medium=Course&utm_campaign=thisweekinreact#section-1687709246499) is our **Full Stack Mobile Developer** course with more than 550 real success stories from graduates.
+
+💌 [**Here**](https://assets.notjust.dev/profile?utm_source=newsletter&utm_medium=OurNewsletter&utm_campaign=thisweekinreact) is our **Newsletter** with the TOP selection of news and life hacks about the world of React Native development.
+
+All our content is **Project-Based-Learning** - which means that you will be learning the **skills** and adding **projects** to your portfolio at the same time!
+
+_PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustdev/live?sub_confirmation=1)_. Today we are building a_ **_ChatGPT Wrapper_** \_with Expo Router V3 & API Routes!
 
 ---
 
