--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
@@ -64,7 +64,7 @@ _PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustd
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 💸 [AnimateReactNative - Premium and Custom React Native animations](https://www.animatereactnative.com/?utm_source=thisweekinreact.com)
 
 ---
 
