--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -34,8 +34,6 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-<Todo />
-
 - 💸 [Take the Developer Nation Survey - A virtual goody bag packed with free data, promo codes for event tickets, courses, tools & platforms is waiting at the end of the survey!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad3)
 
 <SubscribeFormEmbed placement="middle" />
@@ -64,7 +62,7 @@ _PS: Subscribe to our_ [**_YouTube channel_**](https://www.youtube.com/@notjustd
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 💸 [AnimateReactNative - Premium and Custom React Native animations](https://www.animatereactnative.com/?utm_source=thisweekinreact.com)
 
 ---
 
